--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container container-garden-show" data-controller="tile-container">
   <%# Info widget %>
   <div class="container-info-widget">
-    <div class="card-widget">
+    <div class="card-widget-weather">
       <% unless @weather_response['cod'] == '404' %>
         <%= render "gardens/weather" %>
       <% else %>
@@ -12,9 +12,9 @@
       <%# Tile/plot edit widget %>
       <div class="form-container-gardens" data-tile-container-target="form">
         <%= simple_form_for [@garden, @plot] do |f| %>
-          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Recommended", required: false %>
+          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Choose A Crop", required: false %>
           <%= f.input :tiles, as: :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
-          <%= f.submit "Plant Crops", class: 'btn btn-primary btn-gardens' %>
+          <%= f.submit "Plant Crops", class: 'btn btn-primary btn-gardens btn-shadow mt-0' %>
         <% end %>
       </div>
       <div id="selected-tile" data-tile-container-target="selected-plot">
