--- a/app/views/gardens/_weather.html.erb
+++ b/app/views/gardens/_weather.html.erb
@@ -1,7 +1,9 @@
 <h3><%= @weather_response['name'] %></h3>
+<div>
 <%= image_tag("http://openweathermap.org/img/wn/#{@weather_response['weather'][0]['icon']}@2x.png") %>
+<small><%= @weather_response['weather'][0]['description'].capitalize %></small>
+</div>
 <div class="container-temp-info">
-  <p>Low: <%= @weather_response['main']['temp_min'].round %>°C</p>
-  <small><%= @weather_response['weather'][0]['description'].capitalize %></small>
-  <p>High: <%= @weather_response['main']['temp_max'].round %>°C</p>
+  <small>High: <%= @weather_response['main']['temp_max'].round %>°C</small>
+  <small>Low: <%= @weather_response['main']['temp_min'].round %>°C</small>
 </div>
