--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -341,6 +341,21 @@ color: #ff6600 !important;
 .card-widget {
   text-align: center;
   padding: 0 16px 8px 16px;
+  img {
+    width: 60px;
+    height: 60px;
+    padding: 4px;
+    object-fit: contain;
+    background-color: $weak-yolk;
+    border-radius: 16px;
+  }
+  h3 {
+    font-size: 1.4rem;
+    background-color: $weak-yolk;
+    padding: 8px 16px;
+    border-radius: 16px;
+    margin: 0;
+  }
 }
 
 .card-widget-weather {
@@ -362,6 +377,12 @@ color: #ff6600 !important;
   small {
     margin: 0;
   }
+}
+
+.card-widget-selected-plot {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .card-other-note {
