Add min height to crops#index container.

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -6,6 +6,10 @@
   min-height: 100vh;
 }
 
+.container-crops-index {
+  min-height: 100vh;
+}
+
 .container-info-widget {
   display: flex;
   flex-direction: column;
