--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="mark-crops">
-  <div class="container">
+  <div class="container container-crops-index">
     <%= render 'search_bar_crops', crops: @crops %>
     <%= render 'crops', crops: @crops %>
   </div>
